# perf-ninja

./: .clang-format  .editorconfig  .gitignore  .permissions  Contributing.md  GetStarted.md  QuickstartLinux.md  QuickstartMacOS.md  QuickstartWindows.md  README.md  WORKSPACE  build-steps.md  build.sh  build_notes.txt  cheatsheet.txt  cmd.txt  debug.sh  env.nix  flake.nix  notes.txt  release.sh  run.sh  use_clang.sh
.github/: FUNDING.yml
.github/workflows/: CI.yml  CI_Linux.yml  CI_Linux_Alderlake.yml  CI_Linux_Coffeelake.yml  CI_Linux_x64.yml  CI_Macos_M1.yml  CI_Win.yml  CI_Win_Zen3.yml
buildbot/: runCI.py
labs/: .gitignore  debug_commands  lab_builder_debug.sh  lab_builder_release.sh  lab_commands
labs/bad_speculation/: README.md
labs/bad_speculation/branches_to_cmov_1/: CMakeLists.txt  README.md  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/bad_speculation/conditional_store_1/: README.md  bench.cpp  init.cpp  solution.cpp  solution.h  validate.cpp
labs/bad_speculation/lookup_tables_1/: CMakeLists.txt  README.md  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/bad_speculation/virtual_call_mispredict/: README.md  bench.cpp  solution.cpp  solution.h  validate.cpp
labs/core_bound/: README.md
labs/core_bound/compiler_intrinsics_1/: README.md  bench.cpp  init.cpp  solution.cpp  solution.h  sse2neon.h  validate.cpp
labs/core_bound/compiler_intrinsics_2/: CMakeLists.txt  README.md  bench.cpp  solution.cpp  solution.hpp  validate.cpp
labs/core_bound/compiler_intrinsics_3/: CMakeLists.txt  README.md  bench.cpp  solution.cpp  solution.hpp  validate.cpp
labs/core_bound/compiler_intrinsics_4/: CMakeLists.txt  README.md  bench.cpp  const.h  data_paths.h.in  picture.cpp  picture.h  solution.cpp  solution.h  validate.cpp
labs/core_bound/dep_chains_1/: README.md  arena.hpp  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/core_bound/dep_chains_2/: CMakeLists.txt  README.md  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/core_bound/function_inlining_1/: README.md  bench.cpp  init.cpp  solution.cpp  solution.h  validate.cpp
labs/core_bound/loop_unrolling_1/: README.md  bench.cpp
labs/core_bound/vectorization_1/: CMakeLists.txt  README.md  bench.cpp  init.cpp  justfile  solution.cpp  solution.hpp  solution_0.cpp  solution_1.cpp  solution_2.cpp  unit_tests.cpp  valid results col up to 4.txt  valid results for col1.txt  valid scores for col 1 and 2.txt  validate.cpp
labs/core_bound/vectorization_2/: CMakeLists.txt  README.md  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/data_driven/: README.md
labs/frontend_bound/: README.md
labs/memory_bound/: README.md
labs/memory_bound/data_packing/: .gitignore  CMakeLists.txt  README.md  bench.cpp  build_debug.sh  build_release.sh  init.cpp  notes.txt  solution.cpp  solution.h  validate.cpp
labs/memory_bound/false_sharing_1/: CMakeLists.txt  README.md  bench.cpp  solution.cpp  solution.hpp  validate.cpp
labs/memory_bound/huge_pages_1/: AllocateDoublesArray.hpp  GenerateMesh.cpp  GenerateMesh.hpp  HugePagesSetupTips.md  README.md  bench.cpp  solution.cpp  solution.hpp  validate.cpp
labs/memory_bound/loop_interchange_1/: README.md  a.out  bench.cpp  build.sh  init.cpp  solution.cpp  solution.h  validate.cpp
labs/memory_bound/loop_interchange_2/: CMakeLists.txt  README.md  baseline.json  bench.cpp  solution.cpp  solution.h  validate.cpp
labs/memory_bound/loop_tiling_1/: README.md  bench.cpp  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/memory_bound/mem_alignment_1/: README.md  bench.cpp  solution.cpp  solution.h  validate.cpp
labs/memory_bound/mem_order_violation_1/: CMakeLists.txt  DataPaths.h.in  README.md  bench.cpp  solution.cpp  solution.h  validate.cpp
labs/memory_bound/swmem_prefetch_1/: CMakeLists.txt  README.md  bench.cpp  hash_map_t__prefetch.S  init.cpp  solution.cpp  solution.hpp  validate.cpp
labs/misc/: README.md
labs/misc/io_opt1/: CMakeLists.txt  DataPaths.h.in  MappedFile.hpp  README.md  bench.cpp  solution.cpp  solution.hpp  validate.cpp
labs/misc/lto/: CMakeLists.txt  README.md  ao.cpp  ao.h  ao_helpers.cpp  (+11 more)
labs/misc/pgo/: CMakeLists.txt  README.md  bench.cpp  code.profdata  fd.profdata  fd.profraw  lab.pgd  my.profdata  reference_output.txt  run_bench_tests.lua  validate.cpp
labs/misc/pgo/bench/: ackermann.lua  ary.lua  binarytrees.lua  chameneos.lua  fannkuch.lua  fibo.lua  harmonic.lua  hash2.lua  heapsort.lua  hello.lua  knucleotide.lua  license.txt  matrix.lua  meteor.lua  moments.lua  nbody.lua  nestedloop.lua  nsieve.lua  nsievebits.lua  partialsums.lua  process.lua  prodcons.lua  random.lua  recursive.lua  regexdna.lua  regexmatch.lua  revcomp.lua  reversefile.lua  sieve.lua  spectralnorm.lua  sumcol.lua  takfp.lua  wc.lua  wordfreq.lua
labs/misc/pgo/input/: knucleotide-input20000.txt  moments-input400000.txt  regexdna-input100000.txt  regexmatch-input2000.txt  revcomp-input250000.txt  wordfreq-input20.txt
labs/misc/pgo/lua/: README  ldo.c  loslib.c  lua.c
labs/misc/pgo/md5/: MIT-LICENSE.txt  check_md5.lua  md5.lua
labs/toolchain/: conanfile.txt  linux64_clang_relwithdebinfo.profile  linux64_gcc12_relwithdebinfo.profile
tools/: check_speedup.py  labs.cmake  make_benchmark.sh  make_benchmark_library.sh  make_benchmark_library_mingw.cmd  make_benchmark_library_vs.cmd  make_benchmark_library_vs2019.cmd  msvc_simd_isa.cmake
(+29 files in other folders)
